Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Details__c</fullName>
    <formula>IF( ISBLANK( sirenum__Payment_Account__c ) , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_Details</label>
    <type>Checkbox</type>
</CustomField>