Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Account_portal_admin__c.field-meta.xml
<CustomField>
    <fullName>Account_portal_admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account portal admin</label>
    <type>Checkbox</type>
</CustomField>