Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Text__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Text</label>
    <type>Text</type>
</CustomField>