Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Accrued_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Holiday__c</fullName>
    <label>Accrued Holiday</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>