Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Used in onboarding</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Referee details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>