Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Active_last_14_days__c.field-meta.xml
<CustomField>
    <fullName>Active_last_14_days__c</fullName>
    <formula>if( sirenum__Last_Timesheet__c &gt;= today() - 14, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active last 14 days?</label>
    <type>Checkbox</type>
</CustomField>