Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Additional_References__c.field-meta.xml
<CustomField>
    <fullName>Additional_References__c</fullName>
    <label>Additional References</label>
    <length>255</length>
    <type>Text</type>
</CustomField>