Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Application_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_Date__c</fullName>
    <label>Application Completed Date</label>
    <type>DateTime</type>
</CustomField>