Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Application_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Completion_Time__c</fullName>
    <formula>(Application_Completed_Date__c - Registration_Started__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Completion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>