Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <inlineHelpText>Candidate&apos;s availability for work</inlineHelpText>
    <label>Availability</label>
    <type>TextArea</type>
</CustomField>