Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Average_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Hours_Per_Day__c</fullName>
    <label>Average Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>