Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Average_Pay_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Average_Pay_Per_Hour__c</fullName>
    <label>Average Pay Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>