Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/BA_Branch__c.field-meta.xml
<CustomField>
    <fullName>BA_Branch__c</fullName>
    <label>BA_Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BA_Branches</valueSetName>
    </valueSet>
</CustomField>