Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/BF_Adjusted_Capped_Days__c.field-meta.xml
<CustomField>
    <fullName>BF_Adjusted_Capped_Days__c</fullName>
    <label>BF Adjusted Capped Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>