Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Cancel_No_Show_Rule__c.field-meta.xml
<CustomField>
    <fullName>Cancel_No_Show_Rule__c</fullName>
    <formula>AND(
				 Last_No_Show_Cancelled_Shift__c&gt;(NOW()-365),
					OR(
				 No_Show_Cancelled_Shifts__c&gt;3,
No_Show_Shifts__c&gt;4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel/No Show Rule</label>
    <type>Checkbox</type>
</CustomField>