Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Candidate_Type__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Type__c</fullName>
    <formula>IF(RecordType.Name  = &quot;2nd Tier Candidate&quot;,IMAGE(&quot;/resource/Images/2ndTierCandidate.jpg&quot;, &quot;&quot;) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Type</label>
    <type>Text</type>
</CustomField>