Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/CandidateSubStatus__c.field-meta.xml
<CustomField>
    <fullName>CandidateSubStatus__c</fullName>
    <label>CandidateSubStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Limited Availability</fullName>
            </value>
            <value>
                <fullName>Notice Period Required</fullName>
            </value>
            <value>
                <fullName>Interview Incomplete</fullName>
            </value>
            <value>
                <fullName>Not yet worked</fullName>
            </value>
            <value>
                <fullName>On Special Contract</fullName>
            </value>
            <value>
                <fullName>Student Available</fullName>
            </value>
            <value>
                <fullName>Student Local</fullName>
            </value>
            <value>
                <fullName>Awaiting References</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>&lt;Unspecified&gt;</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Permanently Placed</fullName>
            </value>
            <value>
                <fullName>Student Unavailable</fullName>
            </value>
            <value>
                <fullName>Self-Suited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>