Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Capped_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Capped_Holiday__c</fullName>
    <label>Capped Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>