Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Cellular_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Carrier__c</fullName>
    <label>Cellular Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>