Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/check_for_PAYE_profile__c.field-meta.xml
<CustomField>
    <fullName>check_for_PAYE_profile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It will check for PAYE profile record on contact</description>
    <label>check for PAYE profile</label>
    <type>Checkbox</type>
</CustomField>