Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Client_Created_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Created_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Created Contact</label>
    <type>Checkbox</type>
</CustomField>