Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Community_Background__c.field-meta.xml
<CustomField>
    <fullName>Community_Background__c</fullName>
    <description>Created for JPC-1957 Belfast - Recording Religion - Part 1</description>
    <label>Community Background</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protestant</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Not Either</fullName>
            </value>
            <value>
                <fullName>xxxxxx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>