Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Community_Background_Completed__c.field-meta.xml
<CustomField>
    <fullName>Community_Background_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for JPC-1957 Belfast - Recording Religion - Part 1</description>
    <label>Community Background Completed?</label>
    <type>Checkbox</type>
</CustomField>