Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Commute_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Commute_Preferences__c</fullName>
    <label>Commute Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>