Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Created for JPC-1957 Belfast - Recording Religion - Part 1</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>