Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>General Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>