Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Consent_Last_Updated_Blank__c.field-meta.xml
<CustomField>
    <fullName>Consent_Last_Updated_Blank__c</fullName>
    <formula>ISBLANK( IP_Consent_from_Data_Store__c )</formula>
    <label>Consent Last Updated Blank</label>
    <type>Checkbox</type>
</CustomField>