Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Contact_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>Contact_BirthDate__c</fullName>
    <formula>IF( NOT(ISNULL(Birthdate)), TEXT(DAY(Birthdate))
&amp; &apos;/&apos;
&amp; TEXT(MONTH(Birthdate))
&amp; &apos;/&apos;
&amp; TEXT(YEAR(Birthdate)), &quot;&quot;)</formula>
    <label>Contact BirthDate</label>
    <type>Text</type>
</CustomField>