Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Contact_Us_Query__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Query__c</fullName>
    <description>This field is for internal use only. Please do not add this field to any contact layout.</description>
    <label>Contact Us - Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>