Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Contactable__c.field-meta.xml
<CustomField>
    <fullName>Contactable__c</fullName>
    <formula>IF( Account.Do_Not_Contact__c , &quot;Do Not Contact&quot;, &quot;Yes&quot;)</formula>
    <label>OK to Contact?</label>
    <type>Text</type>
</CustomField>