Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Covering_Branch__c.field-meta.xml
<CustomField>
    <fullName>Covering_Branch__c</fullName>
    <formula>IF(
				Begins(MailingPostalCode,&quot;BS&quot;),&quot;BS&quot;,
				IF(Begins(MailingPostalCode,&quot;B&quot;),&quot;B&quot;,
								&quot;None&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covering Branch</label>
    <type>Text</type>
</CustomField>