Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/CPC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CPC_End_Date__c</fullName>
    <label>CPC End Date</label>
    <type>Date</type>
</CustomField>