Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Current_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Current_Benefits__c</fullName>
    <label>Current Benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>