Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Chat_Service_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Date_Chat_Service_Last_Used__c</fullName>
    <label>Date Chat Service Last Used</label>
    <type>DateTime</type>
</CustomField>