Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Chat_Survey_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Chat_Survey_Last_Sent__c</fullName>
    <label>Date Chat Survey Last Sent</label>
    <type>DateTime</type>
</CustomField>