Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Interview_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Date_Interview_Conducted__c</fullName>
    <label>Date Interview Conducted</label>
    <type>DateTime</type>
</CustomField>