Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_of_audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_audit__c</fullName>
    <label>Date of audit</label>
    <type>Date</type>
</CustomField>