Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Persona_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Persona_Last_Updated__c</fullName>
    <label>Date Persona Last Updated</label>
    <type>DateTime</type>
</CustomField>