Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <label>Date Registered</label>
    <type>Date</type>
</CustomField>