Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Survey_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Survey_Response_Received__c</fullName>
    <label>Date Survey Response Received</label>
    <type>DateTime</type>
</CustomField>