Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <formula>RIGHT(TEXT(VALUE(TEXT(DAY(TODAY())))+100),2)
&amp; &apos;/&apos;
&amp; RIGHT(TEXT(VALUE(TEXT(MONTH(TODAY())))+100),2)
&amp; &apos;/&apos;
&amp; TEXT(YEAR(TODAY()))
&amp; &apos; &apos;
&amp; RIGHT(TEXT(VALUE(TEXT(HOUR(TIMENOW())))+100),2)
&amp; &apos;:&apos;
&amp; RIGHT(TEXT(VALUE(TEXT(MINUTE(TIMENOW())))+100),2)
&amp; &apos;:&apos;
&amp; RIGHT(TEXT(VALUE(TEXT(SECOND(TIMENOW())))+100),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time</label>
    <type>Text</type>
</CustomField>