Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Date_Today__c</fullName>
    <formula>TEXT(DAY(TODAY()))
&amp; &apos;/&apos; 
&amp; TEXT(MONTH(TODAY()))
&amp; &apos;/&apos; 
&amp; TEXT(YEAR(TODAY()))</formula>
    <label>Date Today</label>
    <type>Text</type>
</CustomField>