Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Declaration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compliance Process Field. Gareth Rogan</description>
    <label>Declaration</label>
    <type>Checkbox</type>
</CustomField>