Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Deletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Reason__c</fullName>
    <label>Deletion Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>