Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Deletion_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Requested_Date__c</fullName>
    <label>Deletion Requested Date</label>
    <type>DateTime</type>
</CustomField>