Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/DoHSc_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>DoHSc_Job_Role__c</fullName>
    <description>DoHSc Job Roles</description>
    <inlineHelpText>DoHSc Job Roles</inlineHelpText>
    <label>DoHSc - Job Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bioscience Lead</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>HCPC Biomedical Scientist (BMS)</fullName>
            </value>
            <value>
                <fullName>Lab Assistant</fullName>
            </value>
            <value>
                <fullName>Lab Logistics</fullName>
            </value>
            <value>
                <fullName>Lab Managers</fullName>
            </value>
            <value>
                <fullName>Lab Ops</fullName>
            </value>
            <value>
                <fullName>Lab Support Tech</fullName>
            </value>
            <value>
                <fullName>Lab Technician</fullName>
            </value>
            <value>
                <fullName>Placement Lab Technician</fullName>
            </value>
            <value>
                <fullName>Sample Handler</fullName>
            </value>
            <value>
                <fullName>Senior Lab Technician</fullName>
            </value>
            <value>
                <fullName>Senior Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Shift Supervisors</fullName>
            </value>
            <value>
                <fullName>Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Warehouse Lead</fullName>
                <label>Warehouse Supervisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>