Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/DoHSc_Stages__c.field-meta.xml
<CustomField>
    <fullName>DoHSc_Stages__c</fullName>
    <description>Used as part of the DoHSc contract to determine what stage a worker is at in the recruitment pipeline.</description>
    <inlineHelpText>Used as part of the DoHSc contract to determine what stage a worker is at in the recruitment pipeline.</inlineHelpText>
    <label>DoHSc - Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
                <default>true</default>
                <label>Application</label>
            </value>
            <value>
                <fullName>Talent_Pool</fullName>
                <label>Talent Pool</label>
            </value>
            <value>
                <fullName>Unsuitable</fullName>
            </value>
            <value>
                <fullName>CV Sent</fullName>
            </value>
            <value>
                <fullName>Client interview</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>