Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Driving_Licence__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driving Licence</label>
    <type>Checkbox</type>
</CustomField>