Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Driving_licence_check__c.field-meta.xml
<CustomField>
    <fullName>Driving_licence_check__c</fullName>
    <label>Driving licence check</label>
    <summaryFilterItems>
        <field>sirenum__Ticket__c.sirenum__TicketType__c</field>
        <operation>equals</operation>
        <value>a3k0Y000000tk0e</value>
    </summaryFilterItems>
    <summaryForeignKey>sirenum__Ticket__c.sirenum__Owner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>