Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/DVLA_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>DVLA_Status_Check__c</fullName>
    <label>DVLA Status Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>