Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Ethnic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Origin__c</fullName>
    <label>Ethnic Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>