Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Extra_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Extra_Compliance__c</fullName>
    <label>Extra Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>