Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Fast_Registration_Finished__c.field-meta.xml
<CustomField>
    <fullName>Fast_Registration_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fast Registration Finished</label>
    <type>Checkbox</type>
</CustomField>