Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Fast_Registration_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Fast_Registration_Started_Date__c</fullName>
    <label>Fast Registration Started Date</label>
    <type>DateTime</type>
</CustomField>