Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/First_Shift_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Shift_Date_Time__c</fullName>
    <label>First Shift Date/Time</label>
    <type>DateTime</type>
</CustomField>