Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough__c.field-meta.xml
<CustomField>
    <fullName>Furlough__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the candidate has been Furloughed</description>
    <inlineHelpText>Check this box if the candidate has been Furloughed</inlineHelpText>
    <label>Furloughed</label>
    <type>Checkbox</type>
</CustomField>