Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Approval_Completed__c</fullName>
    <label>Furlough Approval Completed</label>
    <type>DateTime</type>
</CustomField>