Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Approval_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Approval_Submitted__c</fullName>
    <label>Furlough Approval Submitted</label>
    <type>DateTime</type>
</CustomField>