Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Consultant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Consultant_Notes__c</fullName>
    <label>Furlough Consultant Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>