Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_details_bulk_loaded_from_master__c.field-meta.xml
<CustomField>
    <fullName>Furlough_details_bulk_loaded_from_master__c</fullName>
    <label>Furlough details bulk loaded from master</label>
    <type>DateTime</type>
</CustomField>