Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Effective_Date__c</fullName>
    <label>Furlough Effective Date</label>
    <type>Date</type>
</CustomField>