Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Effective_Date_text__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Effective_Date_text__c</fullName>
    <formula>TEXT(DAY(Furlough_Effective_Date__c ))
&amp; &apos;/&apos;
&amp; TEXT(MONTH(Furlough_Effective_Date__c ))
&amp; &apos;/&apos;
&amp; TEXT(YEAR(Furlough_Effective_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Text</type>
</CustomField>