Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Furlough_End_Date__c</fullName>
    <label>Furlough End Date</label>
    <type>Date</type>
</CustomField>