Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_End_Date_text_c__c.field-meta.xml
<CustomField>
    <fullName>Furlough_End_Date_text_c__c</fullName>
    <formula>TEXT(DAY(Furlough_End_Date__c ))
&amp; &apos;/&apos;
&amp; TEXT(MONTH(Furlough_End_Date__c))
&amp; &apos;/&apos;
&amp; TEXT(YEAR(Furlough_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Text</type>
</CustomField>