Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Leave_Agreement_signed__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Leave_Agreement_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furlough Leave Agreement signed</label>
    <type>Checkbox</type>
</CustomField>