Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_May_Weekly_Wage__c.field-meta.xml
<CustomField>
    <fullName>Furlough_May_Weekly_Wage__c</fullName>
    <label>Furlough May Weekly Wage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>