Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_PAYE_RTI_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Furlough_PAYE_RTI_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furlough PAYE/RTI Eligible?</label>
    <type>Checkbox</type>
</CustomField>