Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Rejection_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Rejection_Email_Sent__c</fullName>
    <description>Furlough Field</description>
    <label>Furlough Rejection Email Sent</label>
    <type>DateTime</type>
</CustomField>