Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Required__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Furlough</label>
    <type>Checkbox</type>
</CustomField>