Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Unchecked_By__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Unchecked_By__c</fullName>
    <label>Furlough Unchecked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>