Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Unchecked_Date__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Unchecked_Date__c</fullName>
    <label>Furlough Unchecked Date</label>
    <type>DateTime</type>
</CustomField>