Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Furlough_Weekly_Wage10__c.field-meta.xml
<CustomField>
    <fullName>Furlough_Weekly_Wage10__c</fullName>
    <description>Furlough Field</description>
    <label>Furlough Weekly Wage 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>