Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Future_Benefit_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Future_Benefit_Requirements__c</fullName>
    <label>Future Benefit Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>