Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <label>GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>