Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Handbook_sent__c.field-meta.xml
<CustomField>
    <fullName>Handbook_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handbook sent</label>
    <type>Checkbox</type>
</CustomField>