Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/Has_Used_MySirenum__c.field-meta.xml
<CustomField>
    <fullName>Has_Used_MySirenum__c</fullName>
    <formula>if(isBlank( Last_Used_MySirenum__c ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Used MySirenum</label>
    <type>Checkbox</type>
</CustomField>